# pdf-search

./: .gitignore  Dockerfile  README.md  config.sample.yaml  docker-compose.yml  pyproject.toml
pdf_search/: config.py  database.py  main.py
pdf_search/routes/: __init__.py  ask_routes.py  metadata_routes.py  pdf_routes.py
pdf_search/schemas/: __init__.py
pdf_search/services/: __init__.py  embedding_service.py  pdf_service.py  qa_service.py
tests/: ask_question.py  chroma_test.py  delete_pdf.py  populating_chroma.py  retrieving_from_chroma.py  update_pdf.py  upload_pdf.py
