[tool.poetry]
name = "pdf-search"
version = "0.1.0"
description = ""
authors = ["fruit-bird <github.ru3w9@slmail.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pypdf = "^4.3.1"
pyyaml = "^6.0.2"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
python-multipart = "^0.0.9"
tiktoken = "^0.7.0"
asyncio = "^3.4.3"
aiofiles = "^24.1.0"
sentence-transformers = "^3.0.1"
pdfminer-six = "^20240706"
langchain-chroma = "^0.1.3"
langchain-google-genai = "^1.0.10"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
